# ashscript

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
